src/parser.rs
//! Recursive-descent parser for the defgen IDL (see GRAMMAR.ebnf).
//!
//! Two things shape the implementation:
//!
//! * **Diagnostics over panics.** Every failure produces a [`Diagnostic`] with
//!   a labelled span, and — where the mistake has an obvious intended form —
//!   a `help:` line showing it. The parser tracks the declaration it is inside
//!   so errors deep in a body still say which struct or variant they belong to.
//!
//! * **Recovery.** A failed field does not abort the file: the parser
//!   resynchronizes at the next `,`, the closing delimiter, or the next
//!   top-level declaration, so one run reports as many real errors as it can
//!   without inventing cascading ones.
//!
//! Only syntax and single-literal validity are checked here. Cross-node rules
//! (SPEC.md §11) belong to the semantic pass; see `ast` for the split.

use crate::ast::*;
use crate::diag::{Diagnostic, Severity, suggest};
use crate::lexer::{Kw, Punct, TokKind, Token, lex};
use crate::span::{Span, Spanned};

/// Outcome of parsing one file. `schema` is `Some` exactly when no error-level
/// diagnostic was produced, so downstream stages never see a partial tree.
#[derive(Debug)]
pub struct Parsed {
    pub schema: Option<Schema>,
    pub diagnostics: Vec<Diagnostic>,
}

impl Parsed {
    pub fn has_errors(&self) -> bool {
        self.diagnostics.iter().any(|d| d.severity == Severity::Error)
    }
}

pub fn parse(src: &str) -> Parsed {
    let (tokens, lex_errors) = lex(src);
    // A broken literal or stray character makes the token stream unreliable;
    // parsing on would only produce noise on top of a clear lexical error.
    if !lex_errors.is_empty() {
        return Parsed { schema: None, diagnostics: lex_errors };
    }

    let mut p = Parser { src, tokens, pos: 0, diagnostics: Vec::new(), ctx: Vec::new() };
    let schema = p.parse_file();
    let has_errors = p.diagnostics.iter().any(|d| d.severity == Severity::Error);
    Parsed { schema: if has_errors { None } else { Some(schema) }, diagnostics: p.diagnostics }
}

/// Signals "a diagnostic was already recorded; unwind to the nearest recovery
/// point". Never carries a message — the message is already in `diagnostics`.
#[derive(Debug)]
struct Bail;

type PResult<T> = Result<T, Bail>;

/// What the parser is currently inside, for "in struct `Status`" labels.
struct Ctx {
    what: String,
    span: Span,
}

/// Whether items in a delimited list must be comma-separated (§1: trailing
/// commas are always allowed) or may simply follow one another, as
/// tagged-union variants do (§7).
#[derive(Clone, Copy, PartialEq, Eq)]
enum Sep {
    Required,
    Optional,
}

/// Where item-level recovery inside a list landed.
enum Recover {
    /// A separator was consumed; try another item.
    NextItem,
    /// A closing delimiter is next.
    Close,
    /// A new top-level declaration is next — the list is almost certainly
    /// missing its closer, so give up on it.
    DeclStart,
    Eof,
}

struct Parser<'a> {
    src: &'a str,
    tokens: Vec<Token>,
    pos: usize,
    diagnostics: Vec<Diagnostic>,
    ctx: Vec<Ctx>,
}

// ---------------------------------------------------------------------------
// Token access
// ---------------------------------------------------------------------------

impl<'a> Parser<'a> {
    fn peek(&self) -> &TokKind {
        &self.tokens[self.pos].kind
    }

    fn span(&self) -> Span {
        self.tokens[self.pos].span
    }

    fn bump(&mut self) -> Token {
        let tok = self.tokens[self.pos].clone();
        if self.pos + 1 < self.tokens.len() {
            self.pos += 1;
        }
        tok
    }

    /// Zero-width span just after the previous token — where a missing `;` or
    /// `,` should have been written.
    fn insertion_point(&self) -> Span {
        let prev = if self.pos == 0 { self.tokens[0].span } else { self.tokens[self.pos - 1].span };
        Span { start: prev.end, end: prev.end }
    }

    fn at_eof(&self) -> bool {
        matches!(self.peek(), TokKind::Eof)
    }

    fn at_punct(&self, p: Punct) -> bool {
        matches!(self.peek(), TokKind::Punct(q) if *q == p)
    }

    fn at_kw(&self, k: Kw) -> bool {
        matches!(self.peek(), TokKind::Kw(q) if *q == k)
    }

    fn at_word(&self, word: &str) -> bool {
        matches!(self.peek(), TokKind::Ident(name) if name == word)
    }

    fn eat_punct(&mut self, p: Punct) -> bool {
        if self.at_punct(p) {
            self.bump();
            true
        } else {
            false
        }
    }

    fn eat_kw(&mut self, k: Kw) -> bool {
        if self.at_kw(k) {
            self.bump();
            true
        } else {
            false
        }
    }

    /// True at a keyword that can only begin a top-level declaration.
    fn at_decl_keyword(&self) -> bool {
        matches!(self.peek(), TokKind::Kw(k) if Kw::DECL_KEYWORDS.contains(k))
    }

    /// True at a token that can begin a top-level declaration — the anchor for
    /// error recovery. Includes `#`, which starts an attribute.
    fn at_decl_start(&self) -> bool {
        self.at_decl_keyword() || self.at_punct(Punct::Hash)
    }
}

// ---------------------------------------------------------------------------
// Diagnostics
// ---------------------------------------------------------------------------

impl<'a> Parser<'a> {
    fn diag(&self, span: Span, message: impl Into<String>, label: impl Into<String>) -> Diagnostic {
        let mut d = Diagnostic::error(message).primary(span, label);
        if let Some(ctx) = self.ctx.last() {
            // Skip the context label when it would point at the same place.
            if ctx.span.start != span.start {
                d = d.secondary(ctx.span, format!("in {}", ctx.what));
            }
        }
        d
    }

    fn emit(&mut self, d: Diagnostic) -> Bail {
        self.diagnostics.push(d);
        Bail
    }

    /// `expected <what>, found <token>` at the current token.
    fn expected(&mut self, what: &str) -> Bail {
        let tok = self.tokens[self.pos].clone();
        let d = self.diag(
            tok.span,
            format!("expected {what}, found {}", tok.kind.describe()),
            format!("expected {what}"),
        );
        self.emit(d)
    }

    fn expected_one_of(&mut self, options: &[&str]) -> Bail {
        self.expected(&join_or(options))
    }

    /// Consumes `p`, or reports it as missing. `after` completes the sentence
    /// "expected `;` after the alias declaration" — pass `""` to omit it.
    fn expect(&mut self, p: Punct, after: &str) -> PResult<Span> {
        if self.at_punct(p) {
            return Ok(self.bump().span);
        }
        let tok = self.tokens[self.pos].clone();
        let where_ = if after.is_empty() { String::new() } else { format!(" after {after}") };
        let mut d = self.diag(
            tok.span,
            format!("expected `{}`{where_}, found {}", p.as_str(), tok.kind.describe()),
            format!("expected `{}`", p.as_str()),
        );
        let ins = self.insertion_point();
        if ins.start != tok.span.start {
            d = d.secondary(ins, format!("add `{}` here", p.as_str()));
        }
        Err(self.emit(d))
    }

    fn expect_ident(&mut self, what: &str) -> PResult<Ident> {
        match self.peek().clone() {
            TokKind::Ident(name) => {
                let span = self.bump().span;
                Ok(Ident::new(name, span))
            }
            TokKind::Kw(kw) => {
                let span = self.span();
                let d = self
                    .diag(
                        span,
                        format!("expected {what}, found keyword `{}`", kw.as_str()),
                        format!("`{}` is a reserved word", kw.as_str()),
                    )
                    .help(format!("`{}` cannot be used as a name; pick another one", kw.as_str()));
                Err(self.emit(d))
            }
            _ => Err(self.expected(what)),
        }
    }

    /// A non-negative integer literal.
    fn expect_int(&mut self, what: &str) -> PResult<Spanned<u128>> {
        match self.peek().clone() {
            TokKind::Int(v) => {
                let span = self.bump().span;
                Ok(Spanned::new(v, span))
            }
            TokKind::Punct(Punct::Minus) => {
                let start = self.span();
                self.bump();
                let end = self.span();
                let d = self.diag(start.to(end), format!("{what} cannot be negative"), "negative value");
                Err(self.emit(d))
            }
            TokKind::Float(_) => {
                let span = self.span();
                let d = self
                    .diag(span, format!("{what} must be a whole number"), "found a fractional number")
                    .help("only `scale` and `offset` accept fractional values");
                Err(self.emit(d))
            }
            _ => Err(self.expected(&format!("{what} (an integer literal)"))),
        }
    }

    /// A number for `scale`/`offset`: integer or float, optionally negative.
    fn expect_number(&mut self, what: &str) -> PResult<Spanned<f64>> {
        let start = self.span();
        let negative = self.eat_punct(Punct::Minus);
        let (value, span) = match self.peek().clone() {
            TokKind::Float(v) => (v, self.bump().span),
            TokKind::Int(v) => (v as f64, self.bump().span),
            _ => return Err(self.expected(&format!("a number for `{what}`"))),
        };
        let span = if negative { start.to(span) } else { span };
        Ok(Spanned::new(if negative { -value } else { value }, span))
    }
}

// ---------------------------------------------------------------------------
// Recovery
// ---------------------------------------------------------------------------

impl<'a> Parser<'a> {
    /// Skips tokens until the next top-level declaration or EOF, keeping track
    /// of nesting so a `}` belonging to the broken declaration is consumed
    /// rather than mistaken for the end of the file's structure.
    fn sync_to_decl(&mut self) {
        self.ctx.clear();
        let mut depth: u32 = 0;
        loop {
            if self.at_eof() {
                return;
            }
            if depth == 0 && self.at_decl_start() {
                return;
            }
            let kind = self.peek().clone();
            if kind.is_open_delim() {
                depth += 1;
            } else if kind.is_close_delim() {
                depth = depth.saturating_sub(1);
            }
            self.bump();
        }
    }

    /// Skips the remains of a broken list item, stopping at the next separator,
    /// the closing delimiter, a new declaration, or EOF.
    fn recover_in_list(&mut self, close: Punct) -> Recover {
        let mut depth: u32 = 0;
        loop {
            if self.at_eof() {
                return Recover::Eof;
            }
            if depth == 0 {
                if self.at_punct(close) {
                    return Recover::Close;
                }
                // `;` also ends an item: it separates characteristic bindings,
                // and elsewhere it is a plausible typo for `,`.
                if self.at_punct(Punct::Comma) || self.at_punct(Punct::Semi) {
                    self.bump();
                    return Recover::NextItem;
                }
                if self.peek().is_close_delim() {
                    // A different closer: let the caller report the mismatch.
                    return Recover::Close;
                }
                if self.at_decl_start() || self.at_punct(Punct::Separator) {
                    return Recover::DeclStart;
                }
            }
            let kind = self.peek().clone();
            if kind.is_open_delim() {
                depth += 1;
            } else if kind.is_close_delim() {
                depth -= 1;
            }
            self.bump();
        }
    }

    fn unclosed(&mut self, open: Punct, open_span: Span, close: Punct) -> Bail {
        let d = self
            .diag(
                self.span(),
                format!(
                    "unclosed `{}`: expected `{}`, found {}",
                    open.as_str(),
                    close.as_str(),
                    self.peek().describe()
                ),
                format!("expected `{}`", close.as_str()),
            )
            .secondary(open_span, format!("unclosed `{}`", open.as_str()));
        self.emit(d)
    }

    /// `open item (sep item)* sep? close`, recovering per item. Returns the
    /// items and the span of the whole group.
    fn delimited<T>(
        &mut self,
        open: Punct,
        close: Punct,
        sep: Sep,
        after_open: &str,
        item: fn(&mut Self) -> PResult<T>,
    ) -> PResult<(Vec<T>, Span)> {
        let open_span = self.expect(open, after_open)?;
        let mut items = Vec::new();
        loop {
            if self.at_punct(close) {
                let close_span = self.bump().span;
                return Ok((items, open_span.to(close_span)));
            }
            if self.at_eof() {
                return Err(self.unclosed(open, open_span, close));
            }
            // A new top-level declaration inside a list body means the closing
            // delimiter was forgotten; say that instead of complaining about
            // `struct` not being a valid list item.
            if self.at_decl_keyword() || self.at_punct(Punct::Separator) {
                return Err(self.unclosed(open, open_span, close));
            }

            let outcome = match item(self) {
                Ok(v) => {
                    items.push(v);
                    if self.eat_punct(Punct::Comma) {
                        continue;
                    }
                    if self.at_punct(close) {
                        let close_span = self.bump().span;
                        return Ok((items, open_span.to(close_span)));
                    }
                    if sep == Sep::Optional && !self.at_eof() && !self.at_decl_start() {
                        continue;
                    }
                    if self.at_eof() {
                        return Err(self.unclosed(open, open_span, close));
                    }
                    // The item is complete but nothing separates it from what
                    // follows — almost always a forgotten `,`.
                    let mut options: Vec<&str> = match sep {
                        Sep::Required => vec!["`,`"],
                        Sep::Optional => vec![],
                    };
                    options.push(close.as_quoted());
                    let tok = self.tokens[self.pos].clone();
                    let mut d = self.diag(
                        tok.span,
                        format!("expected {}, found {}", join_or(&options), tok.kind.describe()),
                        format!("expected {}", join_or(&options)),
                    );
                    if sep == Sep::Required {
                        d = d.secondary(self.insertion_point(), "add `,` here");
                    }
                    self.emit(d);
                    self.recover_in_list(close)
                }
                Err(Bail) => self.recover_in_list(close),
            };

            match outcome {
                Recover::NextItem => continue,
                Recover::Close => {
                    if self.at_punct(close) {
                        let close_span = self.bump().span;
                        return Ok((items, open_span.to(close_span)));
                    }
                    return Err(self.unclosed(open, open_span, close));
                }
                Recover::DeclStart => return Err(self.unclosed(open, open_span, close)),
                Recover::Eof => return Err(self.unclosed(open, open_span, close)),
            }
        }
    }
}

// ---------------------------------------------------------------------------
// File and header (§1.1)
// ---------------------------------------------------------------------------

struct Header {
    endian: Option<Spanned<Endianness>>,
    separator: Option<Span>,
}

impl<'a> Parser<'a> {
    fn parse_file(&mut self) -> Schema {
        let header = self.parse_header();
        let decls = self.parse_decls();
        Schema { endian: header.endian, separator: header.separator, decls }
    }

    /// True if the upcoming tokens open a file header (§1.1) — an `endian`
    /// pragma and/or a bare `---` — rather than declarations starting right
    /// away. The header is entirely optional: a file with neither just
    /// starts with its declarations, and the default byte order (little)
    /// applies (§8).
    fn looks_like_header(&self) -> bool {
        let mut i = self.pos;
        while matches!(self.tokens[i].kind, TokKind::Doc(_)) {
            i += 1;
        }
        matches!(&self.tokens[i].kind, TokKind::Ident(name) if name == "endian")
            || matches!(self.tokens[i].kind, TokKind::Punct(Punct::Separator))
    }

    fn parse_header(&mut self) -> Header {
        let mut header = Header { endian: None, separator: None };
        if !self.looks_like_header() {
            return header;
        }
        loop {
            match self.peek().clone() {
                // `//` comments are trivia; a `///` here documents nothing.
                TokKind::Doc(_) => {
                    let span = self.bump().span;
                    let d = Diagnostic::warning("doc comment in the file header documents nothing")
                        .primary(span, "not attached to a declaration")
                        .help("use `//` for a plain comment, or move this above a declaration below `---`");
                    self.emit(d);
                }
                TokKind::Punct(Punct::Separator) => {
                    header.separator = Some(self.bump().span);
                    return header;
                }
                TokKind::Eof => {
                    let d = Diagnostic::error("missing `---` separator")
                        .primary(self.span(), "expected `---` before the end of the file")
                        .note("a file header (an `endian` pragma) is optional, but if present must be followed by `---` then declarations (§1.1)")
                        .help("add a line containing only `---` after the header");
                    self.emit(d);
                    return header;
                }
                TokKind::Ident(name) if name == "endian" => match self.parse_endian_pragma() {
                    Ok(v) => self.set_once(&mut header.endian, v, "endian"),
                    Err(Bail) => self.sync_in_header(),
                },
                // A declaration above the separator: the header is over, and
                // the author forgot the `---`.
                _ if self.at_decl_start() => {
                    let span = self.span();
                    let d = Diagnostic::error("declaration appears above the `---` separator")
                        .primary(span, "declarations belong below `---`")
                        .note("only the `endian` pragma may appear in the file header (§1.1)")
                        .help("add a line containing only `---` between the header and the declarations");
                    self.emit(d);
                    return header;
                }
                _ => {
                    let _ = self.expected_one_of(&["`endian`", "`---`"]);
                    self.sync_in_header();
                    if self.at_eof() {
                        return header;
                    }
                }
            }
        }
    }

    /// Skips to the next `;`, `---`, or declaration after a bad pragma.
    fn sync_in_header(&mut self) {
        loop {
            match self.peek() {
                TokKind::Eof | TokKind::Punct(Punct::Separator) => return,
                TokKind::Punct(Punct::Semi) => {
                    self.bump();
                    return;
                }
                _ if self.at_decl_start() => return,
                _ => {
                    self.bump();
                }
            }
        }
    }

    fn set_once<T>(&mut self, slot: &mut Option<Spanned<T>>, value: Spanned<T>, name: &str) {
        match slot {
            Some(first) => {
                let d = Diagnostic::error(format!("the `{name}` pragma is declared more than once"))
                    .primary(value.span, format!("second `{name}` declaration"))
                    .secondary(first.span, "first declared here")
                    .note(format!("`{name}` is a file-wide setting and must appear exactly once (§1.1)"));
                self.emit(d);
            }
            None => *slot = Some(value),
        }
    }

    fn parse_endian_pragma(&mut self) -> PResult<Spanned<Endianness>> {
        let kw_span = self.bump().span; // `endian`
        if self.at_punct(Punct::Eq) {
            let span = self.span();
            let d = self
                .diag(span, "the `endian` pragma is written with `:`, not `=`", "expected `:`")
                .help("write `endian: little;`");
            return Err(self.emit(d));
        }
        self.expect(Punct::Colon, "`endian`")?;
        let word = self.expect_ident("`little` or `big`")?;
        let value = match word.name.as_str() {
            "little" => Endianness::Little,
            "big" => Endianness::Big,
            other => {
                let mut d = self.diag(
                    word.span,
                    format!("unknown byte order `{other}`"),
                    "expected `little` or `big`",
                );
                if let Some(s) = suggest(other, &["little", "big"]) {
                    d = d.help(format!("did you mean `{s}`?"));
                }
                return Err(self.emit(d));
            }
        };
        let span = kw_span.to(word.span);
        self.expect(Punct::Semi, "the `endian` pragma")?;
        Ok(Spanned::new(value, span))
    }
}

// ---------------------------------------------------------------------------
// Declarations
// ---------------------------------------------------------------------------

impl<'a> Parser<'a> {
    fn parse_decls(&mut self) -> Vec<Decl> {
        let mut decls = Vec::new();
        while !self.at_eof() {
            self.ctx.clear();
            match self.parse_decl() {
                Ok(Some(decl)) => decls.push(decl),
                Ok(None) => {}
                Err(Bail) => self.sync_to_decl(),
            }
        }
        decls
    }

    fn parse_decl(&mut self) -> PResult<Option<Decl>> {
        // A second `---`: report it and carry on with the declarations.
        if self.at_punct(Punct::Separator) {
            let span = self.bump().span;
            let d = Diagnostic::error("unexpected `---`")
                .primary(span, "the header separator may appear only once")
                .note("everything after the first `---` is a type or service declaration (§1.1)");
            self.emit(d);
            return Ok(None);
        }

        let docs = self.collect_docs();
        let attrs = self.parse_attrs()?;
        // `///` after `#[...]`: the spec fixes doc-then-attribute order.
        let docs = if matches!(self.peek(), TokKind::Doc(_)) {
            let span = self.span();
            let extra = self.collect_docs();
            let d = Diagnostic::error("doc comment must come before the attribute")
                .primary(span, "doc comment after `#[...]`")
                .note("the declaration order is `///` doc comments, then `#[...]` attributes (§1.2)");
            self.emit(d);
            docs.into_iter().chain(extra).collect()
        } else {
            docs
        };

        if self.at_eof() {
            if !docs.is_empty() {
                let span = docs.first().unwrap().span.to(docs.last().unwrap().span);
                let d = Diagnostic::error("doc comment documents nothing")
                    .primary(span, "no declaration follows")
                    .help("use `//` for a plain comment");
                self.emit(d);
            }
            if !attrs.is_empty() {
                let d = Diagnostic::error("attribute is not attached to a declaration")
                    .primary(attrs[0].span, "no declaration follows");
                self.emit(d);
            }
            return Ok(None);
        }

        match self.peek().clone() {
            TokKind::Kw(Kw::Alias) => {
                self.reject_attrs(&attrs, "an `alias`");
                Ok(Some(Decl::Alias(self.parse_alias(docs)?)))
            }
            TokKind::Kw(Kw::Scaled) => {
                self.reject_attrs(&attrs, "a `scaled` declaration");
                Ok(Some(Decl::Scaled(self.parse_scaled(docs)?)))
            }
            TokKind::Kw(Kw::Enum) => self.parse_enum_or_union(docs, attrs).map(Some),
            TokKind::Kw(Kw::Struct) => Ok(Some(Decl::Struct(self.parse_struct(docs, attrs)?))),
            TokKind::Kw(Kw::Const) => {
                self.reject_attrs(&attrs, "a `const`");
                Ok(Some(Decl::Const(self.parse_const(docs)?)))
            }
            TokKind::Kw(Kw::Service) => {
                self.reject_attrs(&attrs, "a `service`");
                Ok(Some(Decl::Service(self.parse_service(docs)?)))
            }
            // Pragma below the separator.
            TokKind::Ident(name) if name == "endian" => {
                let span = self.span();
                let d = Diagnostic::error("the `endian` pragma must appear in the file header".to_string())
                    .primary(span, "found below the `---` separator")
                    .note("`endian` is a file-wide setting and lives above `---` (§1.1)")
                    .help("move this `endian` line above the `---`");
                Err(self.emit(d))
            }
            TokKind::Kw(Kw::Characteristic) => {
                let span = self.span();
                let d = self
                    .diag(
                        span,
                        "`characteristic` may only appear inside a `service` block",
                        "not at file scope",
                    )
                    .note("characteristic bindings are grouped under a service UUID (§10)")
                    .help("wrap it in `service Name(uuid: \"...\") { ... }`");
                Err(self.emit(d))
            }
            TokKind::Ident(name) => {
                let span = self.span();
                let mut d = self.diag(
                    span,
                    format!("expected a declaration, found identifier `{name}`"),
                    "expected `alias`, `scaled`, `enum`, `struct`, `const` or `service`",
                );
                let keywords: Vec<&str> = Kw::DECL_KEYWORDS.iter().map(|k| k.as_str()).collect();
                if let Some(s) = suggest(&name, &keywords) {
                    d = d.help(format!("did you mean `{s}`?"));
                }
                Err(self.emit(d))
            }
            _ => Err(self.expected_one_of(&[
                "`alias`",
                "`scaled`",
                "`enum`",
                "`struct`",
                "`const`",
                "`service`",
            ])),
        }
    }

    fn collect_docs(&mut self) -> Docs {
        let mut docs = Vec::new();
        while let TokKind::Doc(text) = self.peek().clone() {
            let span = self.bump().span;
            docs.push(Doc { text, span });
        }
        docs
    }

    /// Parses any number of `#[...]` attributes, resolving them against the
    /// recognized set (§1.2). Unknown attributes are reported but skipped, so
    /// the declaration itself still gets parsed.
    fn parse_attrs(&mut self) -> PResult<Vec<Attr>> {
        let mut attrs: Vec<Attr> = Vec::new();
        while self.at_punct(Punct::Hash) {
            let hash = self.bump().span;
            self.expect(Punct::LBracket, "`#`")?;
            let name = self.expect_ident("an attribute name")?;

            match name.name.as_str() {
                "endian" => {
                    let value = self.parse_endian_attr_arg(&name)?;
                    let close = self.expect(Punct::RBracket, "the attribute")?;
                    let span = hash.to(close);
                    if let Some(previous) = attrs.iter().find(|a| matches!(a.kind, AttrKind::Endian(_))) {
                        let d = Diagnostic::error("duplicate `endian` attribute")
                            .primary(span, "second `#[endian(...)]` on this declaration")
                            .secondary(previous.span, "first one here")
                            .note("a container has exactly one byte order (§8)");
                        self.emit(d);
                    } else {
                        attrs.push(Attr { kind: AttrKind::Endian(value), span });
                    }
                }
                other => {
                    let mut d = self
                        .diag(name.span, format!("unknown attribute `{other}`"), "not a recognized attribute")
                        .note("v1 recognizes only `endian(little)` / `endian(big)` (§1.2)");
                    if let Some(s) = suggest(other, &["endian"]) {
                        d = d.help(format!("did you mean `{s}`?"));
                    }
                    self.emit(d);
                    // Skip the rest of the attribute so the declaration below
                    // still parses.
                    let mut depth = 1;
                    while depth > 0 && !self.at_eof() {
                        let kind = self.bump().kind;
                        if kind.is_open_delim() {
                            depth += 1;
                        } else if kind.is_close_delim() {
                            depth -= 1;
                        }
                    }
                }
            }
        }
        Ok(attrs)
    }

    fn parse_endian_attr_arg(&mut self, name: &Ident) -> PResult<Spanned<Endianness>> {
        if !self.at_punct(Punct::LParen) {
            let d = self
                .diag(
                    name.span,
                    "`endian` attribute needs a byte order argument",
                    "expected `(little)` or `(big)`",
                )
                .help("write `#[endian(little)]` or `#[endian(big)]`");
            return Err(self.emit(d));
        }
        self.bump(); // `(`
        let word = self.expect_ident("`little` or `big`")?;
        let value = match word.name.as_str() {
            "little" => Endianness::Little,
            "big" => Endianness::Big,
            other => {
                let mut d = self.diag(
                    word.span,
                    format!("unknown byte order `{other}`"),
                    "expected `little` or `big`",
                );
                if let Some(s) = suggest(other, &["little", "big"]) {
                    d = d.help(format!("did you mean `{s}`?"));
                }
                return Err(self.emit(d));
            }
        };
        self.eat_punct(Punct::Comma);
        self.expect(Punct::RParen, "the attribute argument")?;
        Ok(Spanned::new(value, word.span))
    }
